--- a/src/custom-bootstrap.scss
+++ b/src/custom-bootstrap.scss
@@ -1,4 +1,72 @@
+$black: #000 !default;
+
+// $theme-colors: (
+//   "primary":    $primary,
+//   "secondary":  $secondary,
+//   "success":    $success,
+//   "info":       $info,
+//   "warning":    $warning,
+//   "danger":     $danger,
+//   "light":      $light,
+//   "dark":       $dark
+// ) !default;
+
+$link-decoration: none !default;
+$link-color: $black !default;
+
 @import "~bootstrap/scss/bootstrap";
 
 @import "./components/Header/Header.scss";
 @import "./pages/Login/Login.scss";
+
+.link-btn {
+    border: none;
+    background: none;
+    padding: 0;
+    color: $black;
+    display: inline;
+
+    &:hover,
+    &:active {
+        background: none;
+        border: none;
+        padding: 0;
+    }
+}
+
+.admin-layout {
+    display: flex;
+
+    .sidenav-wrapper {
+        flex-basis: 20%;
+        max-width: 20%;
+    }
+
+    .page-content {
+        flex-grow: 1;
+        padding: 2rem;
+    }
+}
+
+.sidenav {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 1.2rem;
+    font-size: 1.5rem;
+    color: $black;
+    align-items: flex-start;
+    padding: 2rem;
+    border-right: 1px solid $dark;
+    height: 100vh;
+    max-height: 100vh;
+    overflow: auto;
+}
+
+.collapse-nav {
+    padding-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    color: $dark;
+}
