--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,14 +1,35 @@
 .header {
-    .nav {
-        display: flex;
-        justify-content: center;
-        gap: 1.2rem;
-        font-size: 1.5rem;
-        padding: 1rem 0;
-        .nav-item {
-            color: $black;
-            text-decoration: none;
-            padding: 0;
-        }
+  border-bottom: 1px solid $dark;
+
+  >.container {
+    align-items: center;
+    display: flex;
+    gap: 1.2rem;
+  }
+
+  .nav {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    gap: 1.2rem;
+    padding: 1rem 0;
+
+    .nav-item {
+      color: $black;
+      text-decoration: none;
+      padding: 0;
     }
+  }
+
+  .logo-wrapper {
+    margin-right: 1.5rem;
+
+    > * {
+      margin-bottom: 0;
+    }
+  }
+
+  .utility-nav {
+    margin-left: auto;
+  }
 }
