--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -1,14 +1,16 @@
 .sidenav-wrapper {
   position: absolute;
-  width: 20rem;
+  padding: 1rem;
+  max-width: 25rem;
   background: white;
-  //visibility: hidden;
-  transform: translateX(-100%);
+  transform: translateX(-99%);
   transition: transform .3s;
 
-  &.show {
+  &.show,
+  &:focus,
+  &:focus-within
+  &:hover {
     transform: translateX(0);
-    //visibility: visible;
   }
   > .sidenav-toggle {
     position: absolute;
@@ -16,4 +18,6 @@
     top: 50px;
     transform: translateX(100%);
   }
+
+
 }
