--- a/src/custom-bootstrap.scss
+++ b/src/custom-bootstrap.scss
@@ -14,7 +14,7 @@ $black: #000 !default;
 $link-decoration: none !default;
 $link-color: $black !default;
 
-@import "~bootstrap/scss/bootstrap";
+@import '../node_modules/bootstrap/scss/bootstrap';
 
 @import "./components/Header/Header.scss";
 @import "./pages/Login/Login.scss";
@@ -48,6 +48,10 @@ $link-color: $black !default;
 //     }
 // }
 
+.sidenav-wrapper {
+    border-right: 1px solid $dark;
+}
+
 .sidenav {
     display: flex;
     flex-direction: column;
@@ -56,8 +60,7 @@ $link-color: $black !default;
     font-size: 1.5rem;
     color: $black;
     align-items: flex-start;
-    padding: 2rem;
-    border-right: 1px solid $dark;
+    padding: 1rem;
     height: 100vh;
     max-height: 100vh;
     overflow: auto;
