--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -7,6 +7,7 @@
 
 .login-form {
     &__wrapper {
-        border: 1px solid $primary;
+        background: $white;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
     }
 }
