--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -35,7 +35,12 @@
 
   .logo-wrapper {
     margin-right: 1.5rem;
-    width: 80px;
+    width: 40px;
+
+    > svg {
+      height: 100%;
+      width: 100%;
+    }
 
     > * {
       margin-bottom: 0;
