invoice detail component + invoice pdf generator

--- a/src/custom-bootstrap.scss
+++ b/src/custom-bootstrap.scss
@@ -125,3 +125,9 @@ main {
 .card {
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
+
+@for $i from 8 through 30 {
+    .fs-#{$i} {
+      font-size: #{$i}px;
+    }
+}
