loading spinner for user components

--- a/src/custom-bootstrap.scss
+++ b/src/custom-bootstrap.scss
@@ -126,6 +126,13 @@ main {
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
 
+.spinner-wrapper {
+    min-height: calc(100vh - 200px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @for $i from 8 through 30 {
     .fs-#{$i} {
       font-size: #{$i}px;
