--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,4 @@
 .header {
-  //border-bottom: 1px solid $info;
-  // background: $dark;
-  // color: $light;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
   z-index: 2000;
   position: fixed;
@@ -16,6 +13,18 @@
     align-items: center;
     display: flex;
     gap: 1.2rem;
+
+    > a {
+      @media screen and (max-width: 992px) {
+        z-index: 2100;
+      }
+    }
+  
+    > .btn-primary {
+      @media screen and (max-width: 992px) {
+        z-index: 2100;
+      }
+    }
   }
 
   .nav {
@@ -49,5 +58,27 @@
 
   .utility-nav {
     margin-left: auto;
+  }
+
+  .mobile-nav {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: 2000;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: white;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 100px;
+    gap: 1rem;
+    transform: translateY(-100%);
+    transition: transform 0.3s;
+
+    &.d-flex {
+      transform: translateY(0);
+    }
   }
 }
